# cplug.nvim

./: ATTACH.md  Makefile  PLAN.md  README.md
.github/workflows/: tests.yml
doc/: cplug.txt
docs/: testing-fixtures.md
lua/cplug/: cmake.lua  commands.lua  config.lua  dap.lua  health.lua  init.lua  launch.lua  launch_config_picker.lua  layout_picker.lua  orchestrator.lua  path.lua  process_picker.lua
scripts/: fixture-helpers.sh  headless-smoke.sh  run-cpp-demo.sh  run-python-demo.sh  test-cmake-attach.sh  test-cmake-build-and-run-terminal.sh  test-cmake-build-once-terminal-persist.sh  test-cmake-build-once-terminal.sh  test-cmake-configure-terminal-persist.sh  test-cmake-configure-terminal.sh  test-cmake-disassembly-layout.sh  test-cmake-empty-cpp-bootstrap.sh  test-cmake-git-bootstrap.sh  test-cmake-launch-generation.sh  test-cmake-template-generation.sh  test-dap-auto-lldb.sh  test-dap-missing-adapter.sh  test-demo-fixture-runner.sh  test-fixture-launch-selection.sh  test-fixture-projects.sh  test-python-attach.sh  test-python-debugpy-bootstrap.sh  test-python-interpreter-resolution.sh  test-python-nested-layout.sh  test-run-demo-plugin-discovery.sh  test-rust-launch-generation.sh  test-zero-config-debug.sh  test.sh
scripts/demo/: common.sh  cpp-attach-editor.sh  cpp-attach-target.sh  fixture.sh  python-attach-editor.sh  python-attach-target.sh
tests/fixtures/projects/cpp-existing-cmake/: CMakeLists.txt
tests/fixtures/projects/cpp-existing-cmake/include/: app.hpp
tests/fixtures/projects/cpp-existing-cmake/src/: app.cpp  main.cpp
(+36 files in other folders)
